--- a/css/base/base.css
+++ b/css/base/base.css
@@ -19,4 +19,11 @@ body {
   font-weight: 300;
   letter-spacing: 0.01em;
   line-height: 1.6;
+
+  /** Use system fonts. They tend to look nice and are good for performance. **/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+p {
+  margin-top: 0;
 }
