--- a/css/component/button.css
+++ b/css/component/button.css
@@ -1,42 +1,43 @@
 .button {
   display: inline-block;
-  padding: 0 3rem;
-  color: var(--base-color);
-  border-style: solid;
-  border-width: 0.1rem;
-  border-radius: 0.4rem;
-  font-size: 1.1rem;
-  font-weight: 700;
-  height: 3.8rem;
-  letter-spacing: 0.1rem;
+  padding: 0 2rem;
+  letter-spacing: 0.05rem;
   line-height: 3.8rem;
-  text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
   white-space: nowrap;
-  cursor: pointer;
-}
-
-.button:focus {
-  color: var(--base-color);
+  border: 1px solid var(--dark-grey);
+  border-radius: 0.4rem;
+  background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0, 0.20));
 }
 
 .button:hover {
-  color: var(--base-color);
-  outline: 0;
+  background-image: linear-gradient(rgba(0,0,0, 0.10), rgba(0,0,0, 0.30));
+}
+
+.button:active {
+  box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
+  background-image: linear-gradient(rgba(0,0,0, 0.20), rgba(0,0,0, 0.40));
+  border-color: #000;
 }
 
 .button[disabled] {
-  cursor: default;
   opacity: 0.5;
 }
 
 .submit-button {
-  background-color: var(--brand-color);
-  border-color: var(--brand-color);
+  color: var(--base-color);
+  background-color: var(--blue);
 }
 
 .submit-button:hover {
-  background-color: var(--emphasized-brand-color);
-  border-color: var(--emphasized-brand-color);
+  color: var(--base-color);
+}
+
+.danger-button {
+  color: var(--base-color);
+  background-color: var(--red);
+}
+
+.danger-button:hover {
+  color: var(--base-color);
 }
