--- a/css/component/table.css
+++ b/css/component/table.css
@@ -1,23 +1,24 @@
 .table {
   border-spacing: 0;
   width: 100%;
+  margin-bottom: 2rem;
 }
 
-td,
-th {
+.table td,
+.table th {
   border-bottom: 0.1rem solid var(--silver);
   padding: 1.2rem 1.5rem;
   text-align: left;
 }
 
-th:first-child {
+.table th:first-child {
   padding-left: 0;
 }
 
-th:last-child {
+.table th:last-child {
   padding-right: 0;
 }
 
-th.actions a {
+.table th.actions a {
   padding: 1rem;
 }
